--- a/404.md
+++ b/404.md
@@ -5,5 +5,5 @@ permalink: /404.html
 ---
 
 Click here to see my resume!
-[Grant Dickinson Resume](file:///C:/Users/dicki/Downloads/Resume%20chem%20(2).pdf)
+[Grant Dickinson Resume](https://docs.google.com/document/d/1XXggTFgzANMEfCp_pqWKpk62hx9IZZ1UMiphLakSJcs/edit?usp=sharing)
 
